Modificado detalhes da área de usuário e criado a parte de peça ajuda (entrada de dados)

--- a/sga/aplic/templates/footer.html
+++ b/sga/aplic/templates/footer.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<footer class="footer mt-auto py-3 bg-light" id="ajuda">
+    <div class="container d-flex justify-content-between">
+        <div>
+          <span class="text-muted">Sistema da ONG Feixe de Luz -</span>
+          <span class="text-muted">Copy Right 2024.</span>
+        </div>
+
+        <div>
+        <span class="text-muted">Telefone: (32) 3239-0909</span>
+        <span class="text-muted"> - Email: exemplo@email.com.br</span>
+        </div>
+    </div>
+</footer>
