--- a/sga/aplic/templates/ajuda.html
+++ b/sga/aplic/templates/ajuda.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="container mt-5">
+            {% if messages %}
+        <div class="alert alert-success" role="alert">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endif %}
+        <h1 class="text-center">Deseja solicitar ajuda?</h1>
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-8">
+                <form method="POST" action="{% url 'solicitar_ajuda' %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" name="nome" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contato">Contato:</label>
+                        <input type="text" id="contato" name="contato" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="tipo_ajuda">Tipo de Ajuda:</label>
+                        <input type="text" id="tipo_ajuda" name="tipo_ajuda" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="descricao">Descrição:</label>
+                        <textarea id="descricao" name="descricao" class="form-control" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar Solicitação</button>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
