Finalizado a entrada de dados no BD e criada a parte de saída de dados

--- a/sga/aplic/templates/visitas.html
+++ b/sga/aplic/templates/visitas.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container mt-4">
+    <h1>Lista de Visitas</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>IP</th>
+                <th>Data e Hora</th>
+                <th>Navegador</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for visita in visitas %}
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ visita.ip_adress }}</td>
+                <td>{{ visita.data_hora }}</td>
+                <td>{{ visita.user_agent }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
