--- a/sga/aplic/templates/navbar.html
+++ b/sga/aplic/templates/navbar.html
@@ -17,6 +17,11 @@
             <a class="nav-link" href="ajuda">Ajuda</a>
           </li>
         </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'lista_visitas' %}">Visitas</a>
+            </li>
+          </ul>
       </div>
     </div>
   </nav>
